# airquality_sensor

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
last_version/: bsec_integration.c  bsec_integration.h  bsec_iot_example.c
main/: .component.mk.swp  CMakeLists.txt  Kconfig.projbuild  bme_dependency.c  bsec_integration.c  bsec_integration.h  component.mk  http_custom_client.c  i2c_custom.h  main.c  wifi_sensor.c  wifi_sensor.h
main/include_bme/: bsec_integration.c
main/include_custom/: bme_dependency.h  http_custom_client.h  i2c_custom.c  wifi_sensor.c  wifi_sensor.h
working_version/: main.c
